<resources>
    <string name="app_name">NotificationPusher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Set the PushOver Info Here</string>
    <string name="hello_second_fragment">Set your UUID here</string>
    <string name="service_name">NoficationPusher</string>
    <string name="token_label">Token</string>
    <string name="user_id_label">User ID</string>
    <string name="title_home">PushOver</string>
    <string name="title_dashboard">NotiPushServer</string>
    <string name="uuid_label">UUID</string>
    <string name="scan">scan</string>
</resources>