<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_token_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/text_input_token"
        android:text="@string/token_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toStartOf="@id/text_input_token"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_first"/>

    <EditText
        android:id="@+id/text_input_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Token"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_token_label"
        app:layout_constraintTop_toTopOf="@id/textview_first" />

    <TextView
        android:id="@+id/textview_user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/text_input_user_id"
        android:text="@string/user_id_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toStartOf="@id/text_input_token"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_token_label" />

    <EditText
        android:id="@+id/text_input_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="user_id"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_user_id_label"
        app:layout_constraintTop_toBottomOf="@id/textview_token_label" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />
</androidx.constraintlayout.widget.ConstraintLayout>